Product card width on Mobile mode is fixed

--- a/src/components/Products/ProductsList/ProductsList.module.scss
+++ b/src/components/Products/ProductsList/ProductsList.module.scss
@@ -23,6 +23,10 @@
   padding: 0;
 }
 
+.list-item {
+  width: 100%;
+}
+
 .goBackButton {
   position: absolute;
   top: 10;
